--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ a:hover {
   color: #535bf2;
 }
 
+.bg-yellow{
+  background-color: yellow;
+  padding: 2rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+}
+
 body {
   margin: 0;
   display: flex;
