--- a/src/index.css
+++ b/src/index.css
@@ -9,19 +9,19 @@
   --min-page-height: calc(100vh - var(--header-height))
 }
 
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-} */
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
+  :root {
+    --sidebar-width: 0px;
+    --header-height: 150px;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
+@media only screen and (min-width: 600px) and (max-width: 992px){
+  :root {
+    --sidebar-width: 0px;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
